--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,12 @@ title: TEST Blog
 SEOTitle: 阴天 | 咸鱼前端
 header-img: img/post-bg-new.jpg
 email: zhykirby@qq.com
-description: "Every failure is leading towards success."
+description: "心有猛虎，细嗅蔷薇。"
 keyword: "Blog, 阴天, zhykirby, andriod, iOS, Apple, iPhone"
 url: "http://zhykirby.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/zhykirby/zhykirby.github.io.git" # you code repository
+subtitle: "一身转战三千里，一剑曾当百万师。"
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
