--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "test-blog",
-    "title": "Test Blog",
+    "name": "Cloudy",
+    "title": "Cloudy",
     "author": "zhykirby",
     "version": "1.7.0",
     "homepage": "http://zhykirby.github.io",
