--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ sidebar-avatar: /img/avatar_m.jpg      # use absolute URL, seeing it's used in b
 
 # SNS settings
 RSS: false
-# weibo_username:     
+weibo_username:     阴天Howie
 #zhihu_username:     
 github_username:    zhykirby
 #facebook_username:  
