feat: friends link

--- a/_config.yml
+++ b/_config.yml
@@ -105,5 +105,8 @@ friends: [
     },{
         title: "一个咸鱼项目Habit",
         href: "http://www.zhykirby.com"
+    },{
+        title: "炎忍的blog：心之所愿，无所不成。",
+        href: "http://blog.endureblaze.cn"
     }
 ]
