--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ github_repo: "https://github.com/zhykirby/zhykirby.github.io.git" # you code rep
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "满堂花醉三千客，一剑霜寒十四州。"
-sidebar-avatar: /img/avatar_m.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/avatar_m_1.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
